--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css?family=Aleo|Montserrat');
+@import url('https://fonts.googleapis.com/css?family=Roboto|Sarabun');
 
-$backgroundColor: #eaced6;
-$hover: #ef5da3;
-$h2font: #ffffff;
-$icon: #615aa0;
+$backgroundColor: #F7F7FA;
+$hover: #ffffff;
+$h2font: #1B073B;
+$tableBG: #FDE4F2;
+$openings: #198714;
+$pending: #E3C952;
+$decline: #CC292B;
+$border: #C498C8;
 
-$headerFont: 'Aleo', serif;
-$pFont: 'Montserrat', sans-serif;
+$headerFont: 'Sarabun', sans-serif;
+$pFont: 'Roboto', sans-serif;
